IHAKI-8 Created models for Customer, UAV, Rental, and Category. Implemented a configuration system. Enabled caching through Redis.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,16 @@ LOG_LEVEL=INFO
 SECRET_KEY=SECRETKEYLOCALDEVELOPMENTAREA
 TWO_FACTOR_AUTH_ENABLED=False
 
+REDIS_ADDRESSES=
+REDIS_DB_INDEX=
+REDIS_PASSWORD=
+REDIS_MASTER=
+REDIS_TIMEOUT_SECONDS=
+REDIS_USE_SENTINEL=
+
+REDIS_CONFIGURATION_PREFIX=
+REDIS_CONFIGURATION_TTL=360
+
 SESSION_EXPIRE_AT_BROWSER_CLOSE=True
 SESSION_COOKIE_AGE_IN_SEC=3600
 
