--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
+async-timeout==4.0.3
 Django==4.2.13
 django-environ==0.11.2
 install==1.3.5
 psycopg2-binary==2.9.9
+redis==5.0.4
 sqlparse==0.5.0
 typing_extensions==4.12.0
