--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-environ==0.11.2
 install==1.3.5
 psycopg2-binary==2.9.9
 redis==5.0.4
+gunicorn
 sqlparse==0.5.0
 typing_extensions==4.12.0
 djangorestframework~=3.15.1
